# Video-Curation-Sample

./: .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  CMakeLists.txt  CONTRIBUTING.md  README.md  start_app.sh  stop_app.sh
.github/workflows/: scorecard.yml
deployment/Dockerfiles/: README.md
deployment/Dockerfiles/Flex/ubuntu-20.04/analytics/dev/: Dockerfile  README.md
deployment/Dockerfiles/Flex/ubuntu-20.04/analytics/gst/: Dockerfile  README.md
deployment/Dockerfiles/Flex/ubuntu-20.04/media/dev/: Dockerfile  README.md
deployment/Dockerfiles/Flex/ubuntu-20.04/media/ffmpeg/: Dockerfile  README.md
deployment/Dockerfiles/Flex/ubuntu-22.04/analytics/dev/: Dockerfile  README.md
deployment/Dockerfiles/Flex/ubuntu-22.04/analytics/gst/: Dockerfile  README.md
deployment/Dockerfiles/Flex/ubuntu-22.04/media/dev/: Dockerfile  README.md
deployment/Dockerfiles/Flex/ubuntu-22.04/media/ffmpeg/: Dockerfile  README.md
deployment/Dockerfiles/QAT/: README.md
deployment/Dockerfiles/QAT/ubuntu-20.04/media/dev/: Dockerfile  README.md
deployment/Dockerfiles/QAT/ubuntu-20.04/media/nginx/: README.md
deployment/Dockerfiles/QAT/ubuntu-20.04/media/nginx_sw/: Dockerfile  README.md
deployment/Dockerfiles/QAT/ubuntu-22.04/media/dev/: Dockerfile  README.md
deployment/Dockerfiles/QAT/ubuntu-22.04/media/nginx/: README.md
deployment/Dockerfiles/QAT/ubuntu-22.04/media/nginx_sw/: Dockerfile  README.md
deployment/Dockerfiles/SG1/: README.md
deployment/Dockerfiles/SG1/centos-7/media/dev/: README.md
deployment/Dockerfiles/SG1/centos-7/media/ffmpeg/: README.md
deployment/Dockerfiles/doc/: cmake.md  ffmpeg.md  gst.md  owt.md  svt.md
deployment/Dockerfiles/script/: generate_readme.py  qatbuild.sh  run_hadolint.sh  travis_build.sh  update-image-link.sh  upload-dockerhub-readme.sh
deployment/Dockerfiles/template/components/: ffmpeg.m4  gst-gva.m4  ipsecmb.m4  libpahomqtt.m4  libva-utils.flex.m4  libvmaf.m4  nginx-conf.m4  onevpl-dispatch.m4  owt.m4
deployment/Dockerfiles/test/: ffmpeg_vmaf.sh  nginx_dash.sh  nginx_hls.sh  nginx_html.sh  svt_aom.sh  svt_av1.sh  svt_dav1d.sh
deployment/docker-swarm/: README.md  build.sh  camera_config.yaml  docker-compose.yml.m4  frontend.m4  ingest.m4  start.sh  stop.sh  stream.m4  udf.m4  vdms.m4  video.m4  video_stream.m4
deployment/kubernetes/: vdms.yaml.m4
doc/: cmake.md  dist.md  script.md
frontend/: Dockerfile  frontend.py  merge_iv.py  search.py  setting.py  workload.py
frontend/html/: home.shtml  index.html
frontend/html/css/: app.css
frontend/html/js/: app.js  playback.js  search.js
ingest/: ingest.py
script/: build.sh  deployment.cmake  scan-yaml.awk  service.cmake  update-image.sh
stream/: Dockerfile  build.sh  manage.sh
udf/: CMakeLists.txt  Dockerfile  build.sh  manage.sh  shell.sh
vdms/: CMakeLists.txt  Dockerfile  DynamicMetadataHandler.cc  DynamicMetadataHandler.h  PMGDQueryHandler.cc  Video.cc  Video.h  VideoCommand.cc  api_schema.json  build.sh  defines.h  shell.sh
video/: CMakeLists.txt  Dockerfile  download.sh  info.py  ingest.py  manage.py  manage.sh  manifest.py  process_stream.py  segment.py  segment_archive.py  streamlist.txt  thumbnail.py  utils.py  watch_and_send2vdms.py  watch_and_send2vdms_cb.py
video/remote_function/: README.md  requirements.CPU.txt  requirements.GPU.txt  requirements.txt  udf_server.py
video/remote_function/functions/: add_metadata.py  metadata.py  metadata_async.py  metadata_callback.py  udf_metadata.py
video/resources/models/: download_yolo.py  models.lst
(+45 files in other folders)
